--- a/README.Rmd
+++ b/README.Rmd
@@ -19,11 +19,11 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/rfsaldanha/zenstats/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/rfsaldanha/zenstats/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-Scrap Zenodo deposit statistics.
+A Zenodo deposit contains some statistics of interest, like the number of views and downloads, that is not available to programmaticaly access through its API. The `zenstats` package scraps the one or multiple deposit webpages and return the deposits statistics as a tibble.
 
 ## Installation
 
-You can install the development version of zenstats from [GitHub](https://github.com/) with:
+You can install the development version of zenstats from GitHub with:
 
 ``` r
 # install.packages("remotes")
@@ -40,4 +40,7 @@ ids <- c(10036212, 10947952)
 deposit_stats(ids, all_versions_only = TRUE, progress = FALSE)
 ```
 
+## Why does it take so long?
+
+This package respects the 'robots.txt' policies from Zenodo, including the crawl delay of 10 seconds.
 
